Fixed responsive layout bugs (list below) TOC wasn't positioned right on desktop Mobile layout sometimes didn't appear on small screens TOC was too wide on small screens

--- a/_sass/components/navigation/bar.scss
+++ b/_sass/components/navigation/bar.scss
@@ -15,6 +15,7 @@
     height: 80px;
     padding-top: 12px;
     padding-bottom: 16px;
+    bottom: 0px;
 }
 
 // Navigation bar
