--- a/_sass/layouts/small.scss
+++ b/_sass/layouts/small.scss
@@ -39,6 +39,5 @@
     #navigation {
         grid-column: 1;
         grid-row: 3;
-        width: 100%;
     }
 }
